--- a/src/templates/_todo.hbs
+++ b/src/templates/_todo.hbs
@@ -1,4 +1,4 @@
-<div class="todo js-todo">
+<div class="todo js-todo {{#if done}}is-done{{/if}}">
     <input class="checkbox js-checkbox" type="checkbox" data-index="{{@index}}" {{#if done}}checked{{/if}}>
     <div class="todo-title">{{ title }}</div>
     <button class="delete js-delete" data-index="{{@index}}">Delete</button>
